	cp/ 	PR c++/65936 	* pt.c (lookup_template_class_1): Copy may_alias attribute too.

testsuite/
	PR c++/65936
	* g++.dg/template/pr65936.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@223613 138bc75d-0d04-0410-961f-82ee72b054a4